# master-thesis

./: README.md
aprilTag_detection/april_detect/: package.xml  setup.cfg  setup.py
aprilTag_detection/april_detect/april_detect/: main copy.py  main.py
aprilTag_detection/april_detect/config/: real_params.yaml  sim_params.yaml
aprilTag_detection/april_detect/launch/: start_detection_real.launch.py  start_detection_sim.launch.py
aprilTag_detection/april_detect_msgs/: CMakeLists.txt  package.xml
aprilTag_detection/april_detect_msgs/msg/: Detections.msg  Tag.msg
itav_sim/itav_description/: CMakeLists.txt  package.xml
itav_sim/itav_description/launch/: urdf_visualize.launch.py  urdf_visualize_rviz.launch.py
itav_sim/itav_description/meshes/: fork.stl
itav_sim/itav_description/rviz/: urdf_vis.rviz
itav_sim/itav_description/urdf/: backup.txt  gazebo.xacro  itav_agv.xacro  materials.xacro  plugins.xacro  robot_structure.xacro  zed_camera.macro.xacro
itav_sim/itav_gazebo/: CMakeLists.txt  package.xml
itav_sim/itav_gazebo/launch/: spawn_robot_description.launch.py  spawn_robot_ros2_physical.launch.xml  start_world.launch.py
itav_sim/itav_gazebo/worlds/: empty.world  test1.world  test2.world  test3.world
kalmanFiltering/ekf_interfaces/: CMakeLists.txt  package.xml
kalmanFiltering/ekf_ros/: .gitignore  CMakeLists.txt  package.xml
kalmanFiltering/ekf_ros/config/: params_ekf.yaml  params_lkf.yaml
kalmanFiltering/ekf_ros/launch/: ekf_slam.launch.py  full.launch.py  lkf_slam.launch .py
kalmanFiltering/ekf_ros/maps/big/: cov.csv  ids.csv  landmarks.csv
kalmanFiltering/ekf_ros/maps/hola/: cov.csv  ids.csv  landmarks.csv
kalmanFiltering/ekf_ros/src/: fusion.cpp  main.cpp
pointcloud_proc/kiss-icp/cpp/kiss_icp/core/: Registration.cpp
pointcloud_proc/kiss-icp/cpp/kiss_icp/pipeline/: KissICP.cpp
pointcloud_proc/kiss-icp/ros/launch/: odometry.launch.py
pointcloud_proc/kiss-icp/ros/ros2/: OdometryServer.cpp  OdometryServer.hpp
pointcloud_proc/point_merger/: CMakeLists.txt  package.xml
pointcloud_proc/point_merger/launch/: point_merger.launch.py  tf_launcher.launch.py
pointcloud_proc/point_merger/scripts/: converter.py
pointcloud_proc/point_merger/src/: icp_odom.cpp  main.cpp
